# dde-guard

./: CMakeLists.txt  guard.cpp  guard.h  main.cpp  protection_manager.cpp  protection_manager.h  recorder.cpp  recorder.h  transaction_service.cpp  transaction_service.h
misc/: check_desktop.sh  create_account.service  delete_user.sh  org.deepin.dde.Guard.service  org.deepin.dde.TransactionProtect.conf  org.deepin.dde.guard.delete_user.policy
misc/dbus/: org.deepin.dde.Guard.service  org.deepin.dde.TransactionProtect.service
misc/systemd/: org.deepin.dde.TransactionProtect.service
